FARRAGO: Generify, and use other JDK 1.5 features. In detail: 	* replaced usages of StringBuffer with StringBuilder; 	* generify usages of collections from generated MDR classes, and quite a few other collections too; 	* changed a few API methods to use Properties rather than Map for consistency: 		** FarragoSessionFactory.applyFennelExtensionParameters now takes Properties, was Map 		** FarragoMedDataServer.newColumnSet now takes Map<String,Properties>, was Map 		** FarragoMedMetadataSink.writeObjectDescriptor now takes Properties, was Map 		** FarragoMedMetadataSink.writeColumnDescriptor now takes Properties, was Map 	* use varargs for SqlCall and RexCall constructors (had to reorder args to make this work); 	* use autoboxing and autounboxing (autoboxing implicitly calls Integer.valueOf(int), which is more efficient than new Integer()); 	* added helper classes and methods to cast or filter collections in a typesafe way.
[git-p4: depot-paths = "//open/dt/dev/": change = 7786]